--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                     <p class="section-sub-heading">Fan? Drop a note!</p>
                   <div class="row">
                     <div class="col col-haft s-col-full contact-info">
-                        <p><i class="ti-location-pin"></i>Chicago,US</p>
+                        <p><i class="ti-location-pin"></i>Bacgiang,VietNam</p>
                         <p><i class="ti-mobile"></i>Phone:0334095420</p>
-                        <p><i class="ti-email"></i>Email:</p>
+                        <p><i class="ti-email"></i>Email:tamtien1999@gmail.com</p>
                         
                     </div>
                     <div class="col s-col-full col-haft">
